export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_19",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 19,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_struct": 7,
' +
  '          "nested": 9,
' +
  '          "nested_with_ref": 14,
' +
  '          "an_email": 18
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 8
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 10,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 11
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          12,
" +
  "          13
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 15,
' +
  '          "two": 17
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 16,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 14,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "format": "email"
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 2`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1X247bNhD1s75ioLxIgKy1bMMF3DovSR8CZFEj2RYFFoFA27QtVCIFiuraNfwn/Zv8WGZI2bpkk0Uuu0ACD2CL5HAOh8PLHC5llqd8F+b73qPJAGUyHpsvSvc7HPwy6UWD8STC4nBE7VE0jCa9Qe8JpCw0UwC9b5Xu5H4QeQYvZL5XyWar4Zprpvc5hz/e/x9Amiy5KPgKSrHiCvSWw7X8L0lTBvNygVp4bXvAX1wViRQwDAeh8wzezl/+3a90/VcrLnSyTriawvX8dR/7OM5ayQxopI1i+TYWfKchyXKpNGwC0EGtu69rqEqEzHgRIrY8Gb7E8hurcJxCZvyGZjIDHRZalUvtOYByMP8krhTcnaKaKcX2ng4TofmGK88PIEvEbBSAYBmfuTd30vWD2k5jnexkrnHSLEXTXMnd3nPfVqO6ftX/aD8W56wNHN9xlvbcPeQki1GRiI0Z0Ra9pjMsXqeSaaM2JY98j8IBTqJMdYJjxHI9w6i3rETMRZkZKyp4tyYagZ3cu07XKjC1ySlS1MAVozDMbt2I7Icd69jO6+Q+TfHg/svS0sYeARYU8mPTSPBC81VrbXiC2095t40YNPzw3/n+eTli72Os+A7tY8XXCHraGp1wZCxJbTyo5N23gC/qJbNrSKj13vRsL40j9qvV7ZOycH1gBfBdLgs+NXhm386aW9bzjSIvF9i+CecSz9c+zM05Q51RWgTv7DeNNCOocF2KZd1O0theQUuhw4WUKWeiGSZrsULvPR9mzwEXiqZ4UvmhiV9unPLQqcrUd3oX+cGlWKok18WV3irOQ130HkEeyP+Y+Ufd/D8cjaNL/n8Cubr6EgLwe8oK3cj8JuMjxCdTfmVg0z7d12rNlhxuaLe9EnmpTbJbTMFmgl+xwurK0XHo0sPsTjcc3e9g9inddQdgASzgOG2A0bV0wJYD3mY41k5P4Q1fSrX6zaaNAKfyj5B34jnd7P7UDM6agzc8ORqt4rpU4jwa+dT7maRIKFE8Kv1/6PxHk8nwI/4/GA8u5/8J5Ofk/8xw6jM/xAdB1GTZB5ch18MT7S5ahNZw5yGyUcdZtBCsAjk1283GI1SXBYakhZisWlBIUF2ka5b5IvP03DnV/OPpWfEnIriIRJ0eRGKl3kpVY1njM5aF/hwh/QoiSit8HxcltbnJkWw3O5zaPkVX8YXRYKtFhPdp0GKd0dBtM80TYoOp4vukAUKrEABF8IxETQbNO0CymgKtmlmso99Bb7Ffg1kpXKzs6TFj3VqztMAnXc2GG95Q5rH+2F0Ym3nRr4o9dUCoTK7KFOtdtvU5l2zAu8NeOPdFLnKR7yUfAPCyBLMAFgAA"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 3`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_19",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 19,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_struct": 7,
' +
  '          "nested": 9,
' +
  '          "nested_with_ref": 14,
' +
  '          "an_email": 18
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 8
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 10,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 11
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          12,
" +
  "          13
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 15,
' +
  '          "two": 17
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 16,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 14,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "format": "email"
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 4`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1X3YrjNhTOdZ7i4CsbHMd20llwu3uz04uFlhl2p1AYhqA4cmJqS0aWm4TgN+nb9MV6jvwTJzOwLWXC/uSQYFk+/0c6+hTLvMj4ztPl6NXIR7qZz80T6fwZBm/8UeDPbwI/9MMZzQdB6L8Z+aMLUFVqpgBG/5fOg/tKaDqF97LYq3S90fAr10zvCw53f//lQpbGXJR8BZVYcQV6w+HnjJU6jeGX5hOEnu+NUcWn+9vfJ+3k5MOKC50mKVdRJzBBxjExPtzd3kVQoWiaF1JpyFkxbocHWLug8YcerBUrNlBDomQOludNz349zxSNyWmp4mkuV7iKrR+P6m7x08cKfcn5f1OlGqHSzDRKx7EUpYZS5vyBMvQWtFdqVcXaPowBpOARzjCl2N7WXio0X3NlOy66kacighnUNBYsR0brYSstqB0XJfVWkqQsdCoFy1C4UHK3t61PrSnLQb6hcP8BNfSOxc0+fsk3tsCXVKyjZhpHtrHMFkkmmaZpM7BbVwMX8irTKeq7SyIIW0eZWHBR5cROz4X9aGHUlgsWhmA9dTxt6D1vl4oD0AxXjOKM4NEKSDS0njr1i8blaOA8/MmyyiQWRZeUz5ZZ8FLz1TDjPMX1qezHQYgD486T4/QpXtgDHYstCi4Ux0C72nbB5izNTLQ0sM+K8P6Y77YO/TqyLY2qJ21FJjRfYqw23xWy5A68fQdUlqZutMKwYIJvh8vVRoUdR1EtkWHt3UvckHsPX/FJDMjRqDRVxpWEViOj0EsqEdtmEoYrw22ntLeUMuNMNJkgOrRP4l9RgLZxFAuBJe6/8SThVKIDaIbryRK0AnBvsRIztu/46mbgeJTbxm0b3Ta2KFX0H13pi6AyVmmhy6neKM5fCQV85vzHk392fv6Hs3lwPf8vQJc8/6kbq4TFHB5otX0QRaVN41lG0DR46nrs+FKPx9Th8DCnhkbdG8w6pdZ2AObCEupooIwazKGm9oStU/MddqqPPJZq9VNzKLgYyh9CbsU76lFOZIyzofGBJ7X5qriulOitkU+jb4nKlE6HV4X/n8X//g83z/C/P5tf9/8F6KL7/+vB+cyA6B4+HvF/cIKuTVc4RbkNhCbQPITnyxN9PRcibbaLYD4b8uLtSJ1j+HQ1tGKQFCI/A5bb68I9vlpnIPU31HRySyCZf6GaVXojlbmnqVONxsrLePfVcG7HYI4PxO9Drm7uJTxs7mRHOFzivWbp9kD3BOYGYQty6xPQ2mlvUbK5qh0VmuyYlD7XSt+MZqw1JZhKbepaOy9aMlqLZmzhy54uR41vCcvK5hJofKDDrvWi2QAdzsf4no36uhkx1Imbp8po4hz3WVfUfqUrXelK3xX9A7yNu10AGAAA"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;
